Getting back to it.